# pluginlib-booster

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/pluginlib/: plugin_interface.h  plugin_macro.h  plugin_manager.h  plugin_metadata.h
plugins/: CMakeLists.txt  logger_plugin.cpp  logger_plugin.json
src/: CMakeLists.txt  plugin_manager.cpp
tests/: CMakeLists.txt  main.cpp
